Fix shift key problem

--- a/libkmfl/ChangeLog
+++ b/libkmfl/ChangeLog
@@ -1,3 +1,5 @@
+0.9             30-Aug-2005
+				Fix shift key problem
 0.8             4-Jul-2005
 				Add full support for virtual keys.
 0.7             2-Jun-2005
