--- a/scim_kmfl_imengine/ChangeLog
+++ b/scim_kmfl_imengine/ChangeLog
@@ -1,6 +1,7 @@
 0.9.1
 
   * fix enumeration of uncompiled keyboards in scim kmfl setup
+  * AMD64 fixes
 
  -- Doug Rintoul <doug_rintoulsil.org>  Mon, 02 Feb 2006 11:00:00 +0800
 
