--- a/kmflcomp/debian/changelog
+++ b/kmflcomp/debian/changelog
@@ -1,3 +1,10 @@
+libkmfl (0.9.2-1) unstable; urgency=low
+
+  * Replace UTF Conversion library with a GPLed implementation
+  * add version and usage message to kmflcomp
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 +0800
+
 kmflcomp (0.9.1-1) unstable; urgency=low
 
   * fix headers for C++ inclusion
