--- a/libkmfl/debian/changelog
+++ b/libkmfl/debian/changelog
@@ -1,3 +1,10 @@
+libkmfl (0.9.2-1) unstable; urgency=low
+
+  * Replace UTF Conversion library with a GPLed implementation
+  * fix any/index bug
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 +0800
+
 libkmfl (0.9.1-1) unstable; urgency=low
 
   * further fix for the shift key problem
