--- a/scim_kmfl_imengine/ChangeLog
+++ b/scim_kmfl_imengine/ChangeLog
@@ -1,3 +1,10 @@
+0.9.2
+
+  * disable scim restart when installing keyboards with scim_kmfl_setup
+    causes apps to crash
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Mon, 02 Mar 2006 16:33:00 +0800
+
 0.9.1
 
   * fix enumeration of uncompiled keyboards in scim kmfl setup
