--- a/kmflcomp/ChangeLog
+++ b/kmflcomp/ChangeLog
@@ -1,3 +1,10 @@
+kmflcomp (0.9.2-1)
+
+  * Replace UTF Conversion library with a GPLed implementation
+  * add version and usage message to kmflcomp
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 +0800
+
 kmflcomp (0.9.1-1)
 
   * fix headers for C++ inclusion
