--- a/scim_kmfl_imengine/ChangeLog
+++ b/scim_kmfl_imengine/ChangeLog
@@ -1,3 +1,9 @@
+0.9.3
+
+  * Use UTF conversion routines in kmflcomp rather than a local copy
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Wed, 08 Mar 2006 16:33:00 +0800
+ 
 0.9.2
 
   * disable scim restart when installing keyboards with scim_kmfl_setup
