--- a/scim_kmfl_imengine/debian/changelog
+++ b/scim_kmfl_imengine/debian/changelog
@@ -1,3 +1,9 @@
+scim-kmfl-imengine (0.9.3-1) unstable; urgency=low
+
+  * Use UTF conversion routines in kmflcomp rather than a local copy
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Wed, 08 Mar 2006 16:33:00 +0800
+
 scim-kmfl-imengine (0.9.2-1) unstable; urgency=low
 
   * disable scim restart when installing keyboards with scim_kmfl_setup
