--- a/libkmfl/ChangeLog
+++ b/libkmfl/ChangeLog
@@ -1,3 +1,10 @@
+libkmfl (0.9.4-1) 
+
+  * Use UTF conversion routines in kmflcomp rather than a local copy
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 +0800
+
+
 libkmfl (0.9.2-1)
 
   * Replace UTF Conversion library with a GPLed implementation
