--- a/kmflcomp/ChangeLog
+++ b/kmflcomp/ChangeLog
@@ -3,7 +3,7 @@ kmflcomp (0.9.4-1)
   * Consolidate utfconv to kmflcomp
   * fix reinitialization bug when using kmflcomp to load multiple keyboards
 
- -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 -0700
 
 
 kmflcomp (0.9.2-1)
@@ -11,14 +11,14 @@ kmflcomp (0.9.2-1)
   * Replace UTF Conversion library with a GPLed implementation
   * add version and usage message to kmflcomp
 
- -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 -0800
 
 kmflcomp (0.9.1-1)
 
   * fix headers for C++ inclusion
   * fix bug when compile a keyboard with Non UTF upper ANSI characters
 
- -- Doug Rintoul <doug_rintoulsil.org>  Tue, 02 Feb 2006 11:40:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Tue, 02 Feb 2006 11:40:00 -0800
 
 0.9             30-Aug-2005
 				Fix Shift key problem
