--- a/libkmfl/ChangeLog
+++ b/libkmfl/ChangeLog
@@ -1,8 +1,16 @@
+libkmfl (0.9.5-1) 
+
+  * Fix deadkeys in "any" statement problem
+  * Fix problem when a mixture of backspaces interspersed with characters
+    was output when processing a single keystroke
+
+ -- Doug Rintoul <doug_rintoulsil.org>  Fri, 15 Sep 2006 11:10:00 -0700
+
 libkmfl (0.9.4-1) 
 
   * Use UTF conversion routines in kmflcomp rather than a local copy
 
- -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 -0700
 
 
 libkmfl (0.9.2-1)
@@ -10,14 +18,14 @@ libkmfl (0.9.2-1)
   * Replace UTF Conversion library with a GPLed implementation
   * fix any/index bug
 
- -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 -0800
 
 libkmfl (0.9.1-1)
 
   * further fix for the shift key problem
   * AMD64 fixes
 
- -- Doug Rintoul <doug_rintoulsil.org>  Wed, 12 Oct 2005 09:45:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Wed, 12 Oct 2005 09:45:00 -0800
 
 0.9             30-Aug-2005
 				Fix shift key problem
