--- a/scim_kmfl_imengine/ChangeLog
+++ b/scim_kmfl_imengine/ChangeLog
@@ -1,22 +1,28 @@
+0.9.5
+
+  * Make loading of keyboards more efficient
+
+ -- Doug Rintoul <doug_rintoul@sil.org>  Wed,  6 Sep 2006 13:11:25 -0700
+
 0.9.4
 
   * Use UTF conversion routines in kmflcomp rather than a local copy
 
- -- Doug Rintoul <doug_rintoulsil.org>  Wed, 08 Mar 2006 16:33:00 +0800
- 
+ -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 -0700 
+
 0.9.2
 
   * disable scim restart when installing keyboards with scim_kmfl_setup
     causes apps to crash
 
- -- Doug Rintoul <doug_rintoulsil.org>  Mon, 02 Mar 2006 16:33:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 -0800
 
 0.9.1
 
   * fix enumeration of uncompiled keyboards in scim kmfl setup
   * AMD64 fixes
 
- -- Doug Rintoul <doug_rintoulsil.org>  Mon, 02 Feb 2006 11:00:00 +0800
+ -- Doug Rintoul <doug_rintoulsil.org>  Wed, 12 Oct 2005 09:45:00 -0800
 
 0.9             30-Aug-2005
 				Fix shift key problem
