--- a/kmflcomp/ChangeLog
+++ b/kmflcomp/ChangeLog
@@ -1,10 +1,10 @@
-kmflcomp (0.9.10)
+kmflcomp (0.9.10-1)
 
   * fix bug in processing special stores when special store name is invalid
 
  -- Doug Rintoul <doug_rintoul@sil.org>  Thu, 24 Oct 2013 14:13:31 -0700
 
-kmflcomp (0.9.9)
+kmflcomp (0.9.9-1)
 
   * bugfix for FreeBSD amd64
 
